Only fetch own ads Cleanup unused files from the theme

--- a/itemRental-Reactjs/public/index.html
+++ b/itemRental-Reactjs/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>OLX</title>
+  <title>RentX</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="icon" type="image/png" href="/images/icons/icon-72x72.png" />
@@ -56,43 +56,6 @@
 <body>
   <div id="app"></div>
   <script src="/bundle.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyB5NABy3RXBOf14ZJpngxx7CfhZF3EEvKE",
-      authDomain: "olxapp-1e846.firebaseapp.com",
-      databaseURL: "https://olxapp-1e846.firebaseio.com",
-      projectId: "olxapp-1e846",
-      storageBucket: "",
-      messagingSenderId: "552385731622"
-    };
-    firebase.initializeApp(config);
-
-    let messaging = firebase.messaging();
-
-    // Add the public key generated from the console here.
-    messaging.usePublicVapidKey("BEDz0g6bQEEvbHqcP9sWZlOnc-2CXg-EtIUOFo8_GXLboGmPiG0xkQcMC1A-QIZHAWUCzl3PcgTKOX2S4LkyWSE");
-
-    messaging
-      .requestPermission()
-      .then(function () {
-        console.log("Notification permission granted.");
-        // Retrieve an Instance ID token for use with FCM.
-        return messaging.getToken();
-      }).then(function (token) {
-        // Displaying user token
-        console.log('token >>>> ', token);
-      })
-      .catch(function (err) {
-        console.log("Unable to get permission to notify.", err);
-      });
-
-
-    messaging.onMessage(function (payload) {
-      console.log('onMessage', payload);
-    });
-  </script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js')
@@ -150,5 +113,4 @@
     }
   </script>
 </body>
-
 </html>
